# elenis-dirt

./: Procfile  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  seed.json  tsconfig.json  web.pack.config.js
backend/: api.py  apps.py  endpoints.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_comment_post.py
backend/static/css/: style.css
backend/templates/: base.html  comment_detail.html  comment_view.html  index.html  post_detail.html  post_form.html  post_list.html  post_view.html
public/: index.html
src/: index.tsx
src/components/: package-lock.json  package.json
